# apple-physical-property-prediction

./: README.md  pyproject.toml
